[FIX] csshover.htc was not a bad idea (to support :hover on all tags in IE), but it slows a lot tikiwiki under IE6. We had to rollback some updates because of this slowdown. This is a known problem from upstream developpers and the proposed solution is not applicable everywhere (using more precise CSS like li.group:hover instead of .group:hover) because it has an impact on all themes even homemade ones. I think it's better to have some :hover not working on old IE versions rather than having tikiwiki very slow for people on IE6 due to this ie-specific javascript file.
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/1.10@13120 b456876b-0849-0410-b77d-98878d47e9d5

--- a/css/ie6.css
+++ b/css/ie6.css
@@ -1,4 +1,3 @@
-body {behavior: url(css/csshover.htc)}
 div.upspantext { position: absolute !important; }
 form.upform { width: 100px; }
 .cssmenu ul li {float: left; width: 100% }
